[gd_scene load_steps=2 format=3 uid="uid://dwwhhoq1e0gkl"]

[ext_resource type="Script" path="res://addons/datatable_godot/ui/nodes/importer/customResource/customResourceVarListItem.gd" id="1_x08tm"]

[node name="CustomResourceVarListItem" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_x08tm")

[node name="varName" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0

[node name="varType" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="varImport" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
